reverting to RC1

--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -23,7 +23,7 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<spring.boot.version>1.5.2.RELEASE</spring.boot.version>
-		<spring.cloud.version>Dalston.RELEASE</spring.cloud.version>
+		<spring.cloud.version>Dalston.RC1</spring.cloud.version>
 		<swagger.version>2.4.0</swagger.version>
 		<mongo>3.4</mongo>
 		<commons-io.version>2.4</commons-io.version>
