--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -26,13 +26,7 @@ domain:
   model:
     basePackages:
       - com.anthem.oss.nimbus.core.entity
-      - com.anthem.nimbus.platform.web.flow.login
-      - com.anthem.platform.extension.clientadmin.model
-      - com.anthem.platform.extension.clientadmin.view
-      - com.anthem.platform.client.extension.cm.model
-      - com.anthem.platform.client.extension.cm.view
-      - com.anthem.platform.scheduler.test
-      - com.anthem.platform.extension.clientadmin
+      - com.anthem.oss.nimbus.test.sample.um.model
     typeClassMappings:
       java.time.LocalDate : 
         date
