--- a/platform.spec.model/pom.xml
+++ b/platform.spec.model/pom.xml
@@ -89,6 +89,10 @@
 			<groupId>com.anthem.oss.nimbus.core</groupId>
 			<artifactId>com.anthem.oss.nimbus.core.processor</artifactId>	
 		</dependency>
+		<dependency>
+			<groupId>org.owasp.esapi</groupId>
+    		<artifactId>esapi</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
