F.w.0.3: Added colElem add via Command Executor _update

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -27,6 +27,7 @@ domain:
     basePackages:
       - com.anthem.oss.nimbus.core.entity
       - com.anthem.oss.nimbus.test.sample.um.model
+      - test.com.anthem.oss.nimbus.core.domain.model
     typeClassMappings:
       java.time.LocalDate : 
         date
