--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -180,6 +180,11 @@
     		<groupId>org.springframework.security</groupId>
     		<artifactId>spring-security-jwt</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>ch.mfrey.jackson</groupId>
+		    <artifactId>jackson-antpathfilter</artifactId>
+		    <version>1.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
