JustLogit for exception handling

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -94,3 +94,8 @@ dsl:
     extensions:
       #$execute:
         #$save
+
+platform:
+  config:
+    secure:
+      regex: "^[a-zA-Z0-9/: &.=?$#_-]{1,1000}"
