--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -99,3 +99,7 @@ platform:
   config:
     secure:
       regex: "^[a-zA-Z0-9/: &.=?$#_-]{1,1000}"
+ext:
+  repository:
+    targetUrl: 
+      ext_client: http://localhost:9095
