Fixing the regex for secure logs to make them readable in trace mode

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -98,7 +98,7 @@ dsl:
 platform:
   config:
     secure:
-      regex: "^[a-zA-Z0-9/: &.=?$#_-]{1,1000}"
+      regex: "^[a-zA-Z0-9<>()\\[\\]@/: &.=?,$#_-]{1,}"
 ext:
   repository:
     targetUrl: 
