--- a/platform.core.process/src/test/resources/application-build.yml
+++ b/platform.core.process/src/test/resources/application-build.yml
@@ -104,4 +104,4 @@ dsl:
 platform:
   config:
     secure:
-      regex: "^[a-zA-Z0-9<>()\\[\\]@/: &.=?$#_-]{1,1000}"
+      regex: "^[a-zA-Z0-9<>()\\[\\]@/: &.=?,$#_-]{1,1000}"
