NIM-5206: Unit Testing
In Progress. Test Updates and documentation. Some light factorization including renaming of beans/classes.

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -1,7 +1,10 @@
 spring: 
   data:
     mongodb:  
-      port: 27017
+      # Using 0 assigns a random port -- this is intended for testing purposes only. Some tests when run simultaneously will 
+      # attempt to use the embedded mongo instance on duplicate ports, effectively failing the tests.
+      port: 0 
+        
 security:
     basic:
       enabled: 
