--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -30,7 +30,7 @@ domain:
     basePackages:
       - com.anthem.oss.nimbus.core.entity
       - com.anthem.oss.nimbus.test.sample.um.model
-      - test.com.anthem.oss.nimbus.core.domain.model
+      - com.anthem.oss.nimbus.test.sample.domain.model
     typeClassMappings:
       java.time.LocalDate : 
         date
