--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -228,7 +228,7 @@
 				<groupId>com.anthem.oss.nimbus.core</groupId>
 				<artifactId>com.anthem.oss.nimbus.core.test</artifactId>
 				<version>${nimbus.core.test.version}</version>
-				<scope>test</scope>
+				<!-- <scope>test</scope> -->
 			</dependency>
 			<dependency>
 				<groupId>com.anthem.oss.nimbus.core</groupId>
