--- a/platform.core.processor/pom.xml
+++ b/platform.core.processor/pom.xml
@@ -4,7 +4,7 @@
   	<parent>
 		<groupId>com.anthem.oss.nimbus.core</groupId>
 		<artifactId>com.anthem.oss.nimbus.core.parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0.M6-SNAPSHOT</version>
 	</parent>
 	<dependencies>
 		<dependency>
