--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -104,7 +104,7 @@ dsl:
 platform:
   config:
     secure:
-      regex: "^[a-zA-Z0-9<>()\\[\\]@/: &.=?,$#_-]{1,}"
+      regex: "^[a-zA-Z0-9<>()\\[\\]@/: &.=?,$\n\r#_-]{1,}"
 ext:
   repository:
     targetUrl: 
