--- a/platform.spec.model/pom.xml
+++ b/platform.spec.model/pom.xml
@@ -93,47 +93,64 @@
 			<groupId>org.owasp.esapi</groupId>
     		<artifactId>esapi</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-				<!-- Generates the MongoDB static meta model -->
-        	<plugin>
-			    <groupId>com.mysema.maven</groupId>
-			    <artifactId>apt-maven-plugin</artifactId>
-			    <version>1.1.3</version>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>process</goal>
-			            </goals>
-			            <configuration>
-			                <!-- outputDirectory>${basedir}/target/generated-sources/java</outputDirectory> -->
-			                <processor>
-			                  com.anthem.oss.nimbus.core.processor.DomainAnnotationProcessor
-			                </processor>
-			            </configuration>
-			        </execution>
-			     </executions>
-			</plugin>
-			 <!-- Generated source code to be compiled to .class files -->
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<executions>
-					  <execution>
-							<id>add-extra-source</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>add-source</goal>
-							</goals>
-							<configuration>
-								<sources>
-									<source>${basedir}/target/generated-sources/annotations</source>
-								</sources>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-		</plugins>
+	<plugins>
+		<!-- Generates the MongoDB static meta model -->
+		<plugin>
+			<groupId>com.mysema.maven</groupId>
+			<artifactId>apt-maven-plugin</artifactId>
+			<version>1.1.3</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>process</goal>
+					</goals>
+					<configuration>
+						<!-- outputDirectory>${basedir}/target/generated-sources/java</outputDirectory> -->
+						<processor>
+							com.anthem.oss.nimbus.core.processor.DomainAnnotationProcessor
+						</processor>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+		<!-- Generated source code to be compiled to .class files -->
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>build-helper-maven-plugin</artifactId>
+			<executions>
+				<execution>
+					<id>add-extra-source</id>
+					<phase>generate-sources</phase>
+					<goals>
+						<goal>add-source</goal>
+					</goals>
+					<configuration>
+						<sources>
+							<source>${basedir}/target/generated-sources/annotations</source>
+						</sources>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+				<includes>
+					<include>**/Test*.java</include>
+					<include>**/*Tests.java</include>
+					<include>**/*Test.java</include>
+				</includes>
+			</configuration>
+		</plugin>
+	</plugins>
 	</build>
 </project>
