repackaged test entity classes

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -30,7 +30,8 @@ domain:
     basePackages:
       - com.anthem.oss.nimbus.core.entity
       - com.anthem.oss.nimbus.test.sample.um.model
-      - com.anthem.oss.nimbus.test.sample.domain.model
+      - com.anthem.oss.nimbus.test.sample.domain.model.core
+      - com.anthem.oss.nimbus.test.sample.domain.model.ui
       - com.anthem.nimbus.platform.core.bpm
     typeClassMappings:
       java.time.LocalDate : 
