--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -53,7 +53,8 @@
 		<mojo-exec-plugin.version>1.5.0</mojo-exec-plugin.version>
 		<node.version>v8.4.0</node.version>
 		<npm.version>5.3.0</npm.version>
-		<frontend.plugin.version>1.4</frontend.plugin.version>
+		<frontend.plugin.version>1.6</frontend.plugin.version>
+		<maven.karma.plugin.version>1.6</maven.karma.plugin.version>
 		<owasp-esapi.version>2.0.1</owasp-esapi.version>
 		
 		<!-- nimbus-core -->
