Renaming pom.xml name for core-web

--- a/platform.web/pom.xml
+++ b/platform.web/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>	
 
-	<name>platform.web</name>
+	<name>nimbus-core-web</name>
 	<artifactId>com.anthem.oss.nimbus.core.web</artifactId>
 	<description>oss web project</description>
 	<packaging>jar</packaging>
