--- a/platform.web/nimbusui/package.json
+++ b/platform.web/nimbusui/package.json
@@ -38,7 +38,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
+    "@angular/cli": "^1.5.5",
     "@angular/language-service": "^4.3.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
