--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -251,7 +251,7 @@
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>${plugin.version}</version>
+				<version>1.1</version>
 				<extensions>true</extensions>
                 <executions>
                     <execution>
