--- a/platform.parent/pom.xml
+++ b/platform.parent/pom.xml
@@ -33,7 +33,7 @@
 
 	<properties>
 		<sonar.projectName>NIM-Parent</sonar.projectName>
-		<!-- <sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath> -->
+		<sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath>
 		<docker.image.prefix>nimbus</docker.image.prefix>
 		<docker.plugin.version>0.3.258</docker.plugin.version>
 		<spring.boot.maven.version>1.4.0.RELEASE</spring.boot.maven.version>
@@ -246,8 +246,8 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.7.7.201606060606</version>
 				<configuration>
-					<!-- <destFile>${basedir}/target/jacoco.exec</destFile> -->
-					<!-- <dataFile>${basedir}/target/jacoco.exec</dataFile> -->
+				     <destFile>${basedir}/target/jacoco.exec</destFile>
+					 <dataFile>${basedir}/target/jacoco.exec</dataFile>
 					<destFile>${sonar.jacoco.reportPath}</destFile>
 					<dataFile>${sonar.jacoco.reportPath}</dataFile>
 					<append>true</append>
