test case fix. rename package

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -32,8 +32,8 @@ domain:
       - com.antheminc.oss.nimbus.test.sample.um.model
       - com.antheminc.oss.nimbus.test.sample.domain.model.core
       - com.antheminc.oss.nimbus.test.sample.domain.model.ui
-      - com.anthem.nimbus.platform.core.bpm
-      - com.anthem.nimbus.platform.core.rules
+      - com.antheminc.nimbus.platform.core.bpm
+      - com.antheminc.nimbus.platform.core.rules
     typeClassMappings:
       java.time.LocalDate : 
         date
