--- a/platform.web/nimbusui/package.json
+++ b/platform.web/nimbusui/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mavenbuild": "ng build"
+    "mavenbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
