--- a/platform.core.process/src/test/resources/application-build.yml
+++ b/platform.core.process/src/test/resources/application-build.yml
@@ -38,7 +38,8 @@ domain:
       - com.anthem.oss.nimbus.core.entity
       - com.anthem.platform.client.extension.cm.model
       - com.anthem.platform.client.extension.cm.flow
-      - com.anthem.oss.nimbus.test.sample.um.model
+      - com.anthem.oss.nimbus.test.sample.um.model.core
+      - com.anthem.oss.nimbus.test.sample.um.model.view
     typeClassMappings:
       java.time.LocalDate : 
         date
