--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -29,7 +29,8 @@ domain:
   model:
     basePackages:
       - com.anthem.oss.nimbus.core.entity
-      - com.anthem.oss.nimbus.test.sample.um.model
+      - com.anthem.oss.nimbus.test.sample.um.model.core
+      - com.anthem.oss.nimbus.test.sample.um.model.view
       - com.anthem.oss.nimbus.test.sample.domain.model.core
       - com.anthem.oss.nimbus.test.sample.domain.model.ui
       - com.anthem.nimbus.platform.core.bpm
