--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,12 @@ __MACOSX
 .idea/dictionaries
 
 # Sensitive or high-churn files:
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.xml
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
+.idea/
+*.iml
+*.iws
+*.ipr
+*.ids
+*.orig
 
 # Gradle:
 .idea/**/gradle.xml
