--- a/platform.spec.model.test/pom.xml
+++ b/platform.spec.model.test/pom.xml
@@ -15,7 +15,7 @@
     </organization>
     <properties>
         <sonar.projectName>NIM-ModelTest</sonar.projectName>
-        <sonar.jacoco.reportPath>${project.basedir}/../platform.parent/target/jacoco.exec</sonar.jacoco.reportPath>
+        <!-- <sonar.jacoco.reportPath>${project.basedir}/../platform.parent/target/jacoco.exec</sonar.jacoco.reportPath> -->
     </properties>
     <dependencies>
         <dependency>
