F.w.: Added feature to resolve spring based property place holders in ViewConfig annotations and path variables using in @Config

--- a/nimbus-test/src/test/resources/application-test.yml
+++ b/nimbus-test/src/test/resources/application-test.yml
@@ -127,3 +127,10 @@ ext:
   repository:
     targetUrl: 
       ext_client: http://localhost:9095
+      
+test:
+  url:
+    code: test-environment
+    link: https://hooli/thebox/someLink
+    image: https://hooli/thebox/someImage
+    initialize: some-alias      
