Renamed entity based dsl generation to nimbus-entity-dsl

--- a/nimbus-core/core/pom.xml
+++ b/nimbus-core/core/pom.xml
@@ -26,7 +26,7 @@
      <testResources><testResource><directory>../src/test/resources</directory></testResource></testResources>
      <testOutputDirectory>../target/test-classes</testOutputDirectory>
      
-     <directory>../target/build</directory>
+     <directory>../target</directory>
      
      <plugins>
      
