--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -294,7 +294,7 @@
             </dependency>
             <dependency>
                 <groupId>com.antheminc.oss</groupId>
-                <artifactId>nimbus-dsl</artifactId>
+                <artifactId>nimbus-entity-dsl</artifactId>
                 <version>${nimbus.dsl.version}</version>
             </dependency>            
             <dependency>
