--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -179,6 +179,12 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+			    <groupId>cz.jirutka.spring</groupId>
+			    <artifactId>embedmongo-spring</artifactId>
+			    <version>1.3.1</version>
+			    <scope>test</scope>
+			</dependency>
+            <dependency>
                 <groupId>redis.embedded</groupId>
                 <artifactId>embedded-redis</artifactId>
                 <version>${embed-redis.version}</version>
