--- a/nimbus-parent/post/pom.xml
+++ b/nimbus-parent/post/pom.xml
@@ -3,7 +3,7 @@
 
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
-		<artifactId>nimbus-core-parent</artifactId>
+		<artifactId>nimbus-parent</artifactId>
 		<version>1.0.0.M1-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
@@ -15,26 +15,17 @@
     <properties>
         <sonar.projectName>nimbus-entity-dsl</sonar.projectName>
     </properties>
+    
     <dependencies>
        	<dependency>
 			<groupId>com.antheminc.oss</groupId>
 			<artifactId>nimbus-core</artifactId>
 		</dependency>
-		
-        <!-- Querydsl -->
-        <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-mongodb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-apt</artifactId>
-        </dependency>
     </dependencies>
 
 	<build>
-		 <sourceDirectory>../target/generated-sources/annotation</sourceDirectory>
-		 <directory>../target/nimbus-entity-dsl</directory>
+		 <sourceDirectory>../../nimbus-core/target/generated-sources/annotations</sourceDirectory>
+		 <directory>../../nimbus-core/target/nimbus-entity-dsl</directory>
 	</build>
 
 </project>
